perf: N+1 문제 해결을 위해 @EntityGraph 적용 및 DTO 최적화
- Movie 조회 시 연관 데이터를 함께 로딩하도록 @EntityGraph 추가
- 데이터 조회 성능 최적화 및 쿼리 수 감소
- 필요한 데이터를 선택적으로 반환하기 위해 DTO 최적화