@@ -1,8 +1,9 @@
-package com.example.movieapplication.dto;
+package com.example.application.dto.response;
 
-import com.example.moviedomain.entity.Movie;
+import com.example.domain.model.entity.Movie;
 import java.time.LocalDate;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public record MovieResponseDto(
         Long id,
@@ -12,9 +13,15 @@ public record MovieResponseDto(
         String thumbnailUrl,
         int runtimeMinutes,
         String genre,
+        String theater,
         List<ScreeningResponseDto> screenings
 ) {
     public static MovieResponseDto fromEntity(Movie movie) {
+        String theaterName = movie.getScreenings().stream()
+                .findFirst()  // 첫 번째 screening 에서 가져옴
+                .map(screening -> screening.getTheater().getName())  // theater 이름 추출
+                .orElse("No Theater Available");  // theater 없는 경우
+
         return new MovieResponseDto(
                 movie.getId(),
                 movie.getTitle(),
@@ -23,9 +30,10 @@ public record MovieResponseDto(
                 movie.getThumbnailUrl(),
                 movie.getRuntimeMinutes(),
                 movie.getGenre(),
+                theaterName,
                 movie.getScreenings().stream()
                         .map(ScreeningResponseDto::fromEntity)
-                        .toList()
+                        .collect(Collectors.toList()) // Screening -> ScreeningResponseDto
         );
     }
 }
